--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
-    "husky": "^4.3.0",
     "postcss": "^8.1.2",
+    "postcss-nesting": "^7.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -23,6 +24,7 @@
     "tailwindcss": "^1.9.5"
   },
   "devDependencies": {
+    "husky": "^4.3.0",
     "prettier": "2.1.2"
   },
   "keywords": [
@@ -45,4 +47,5 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby-tailwind-boilerplate/issues"
   }
+  
 }
