--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "arrowParens": "avoid",
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
-  "tabWidth": 3
+  "tabWidth": 2,
+  "printWidth": 80
 }
