--- a/package.json
+++ b/package.json
@@ -26,10 +26,6 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.12.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.3.0",
@@ -46,6 +42,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "yarn clean && yarn develop",
     "serve": "gatsby serve",
+    "lint": "eslint .  --ext .js --fix",
     "clean": "gatsby clean && yarn cache clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
