--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,18 @@
 {
-    "env": {
-        "node": true
-    },
-    "parser": "babel-eslint",
-    "plugins": ["react"],
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
     "settings": {
         "react": {
             "version": "detect"
         }
-    }
+    },
+    "env": {
+        "node": true
+    },
+    "parser": "babel-eslint",
+    "plugins": [
+        "react"
+    ],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ]
 }
