--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.12.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.3.0",
